Fixed images width bug on Firefox

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,6 +17,9 @@
   display: grid;
   grid-gap: 15px;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  a {
+    width: 100%;
+  }
 }
 
 html {
